...
    <string name="height_prompt">Please enter your height:</string>
    <string name="num_hint">0</string>
    <string name="feet_units">ft</string>
    <string name="inch_units">in</string>
    <string name="without_login">Continue without login</string>
    <string name="with_login">Go back to login</string>
    <string name="enter_gmail_address">Enter gmail address</string>
    <string name="enter_password">Enter unique password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_name">Enter name</string>
    <string name="sign_up_tv">Don\'t have an account? Sign up here</string>
    <string name="login_tv">Already have an account? Log in here</string>

    <!--    In activity_home.xml-->
...
    <string name="trail">Trail</string>
    <string name="hard">Hard</string>
    <string name="moderate">Moderate</string>
    <string name="easy">Easy</string>
    <string name="notes">Notes</string>
    <string name="notesHint">Extra information about the route</string>
    <string name="save">SAVE</string>

    <!--    In activity_routes.xml-->
    <string name="btn_see_teammates_routes">See Teammate Routes</string>
    <string name="menu_item_create_walk">Create Route</string>

    <!--    In item_route.xml-->
    <string name="fake_title">Canyon View Hiking Trail</string>
    <string name="fake_steps">22 steps</string>
    <string name="fake_distance">0.01 miles</string>
    <string name="fake_date">1/20</string>
...
    <!-- In activity_teaminvite_member.xml-->
    <string name="title_add_team_member">Add Team Member</string>
    <string name="hint_enter_team_name">Enter Team Member Name</string>
    <string name="title_team_member_name">Team Member Name</string>
    <string name="hint_enter_team_email">Enter Team Member Email</string>
    <string name="title_team_member_email">Team Member Email</string>
    <string name="btn_send_invite">Send Invitation</string>

    <!-- In activity_team.xml-->
    <string name="title_team_page">Your Walking Team</string>
    <string name="pending_invites">Pending&#10;Invitations</string>
    <string name="invite_team_member">Invite&#10;New Teammate</string>
    <string name="title_teammates_in_team">Teammates: </string>
...
    <string name="app_name">WalkWalkRevolution</string>
    <string name="title_activity_saving_page">Save your walk</string>
    <string name="title_activity_routes">My Routes</string>
    <string name="title_activity_invite_team_to_walk">Invite Team to Walk</string>

    <!--    Others-->
    <string name="routes">Routes</string>
    <string name="home">Home</string>
    <string name="team">Team</string>

    <!-- In ListviewAdapter.java -->
    <string name="fake_teammate_name">Samuel Jackson</string>
    <string name="fake_teammate_initials">SJ</string>

    <!-- In TeamRoutesActivity -->
...
