<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.teams.InviteTeamToWalkActivity">

    <EditText
        android:id="@+id/et_proposed_day_invite_team_to_walk_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_proposed_day_invite_team_to_walk"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@id/tv_proposed_day_prompt_invite_team_to_walk_activity"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_proposed_day_prompt_invite_team_to_walk_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/proposed_day_invite_team_to_walk"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_proposed_day_invite_team_to_walk_activity" />

    <EditText
        android:id="@+id/et_proposed_time_invite_team_to_walk_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_proposed_time_invite_team_to_walk"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@id/tv_proposed_time_prompt_invite_team_to_walk_activity"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_proposed_day_prompt_invite_team_to_walk_activity" />

    <TextView
        android:id="@+id/tv_proposed_time_prompt_invite_team_to_walk_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/proposed_time_invite_team_to_walk"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_proposed_time_invite_team_to_walk_activity" />

    <ImageButton
        android:id="@+id/btn_am_pm_toggle_invite_team_to_walk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_sunny_yellow_24dp"
        app:layout_constraintLeft_toRightOf="@+id/et_proposed_time_invite_team_to_walk_activity"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/am_pm"
        app:layout_constraintHorizontal_bias="0.2"
        android:contentDescription="@string/am_pm_image_description" />

    <TextView
        android:id="@+id/am_pm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/am_text"
        app:layout_constraintLeft_toRightOf="@+id/et_proposed_time_invite_team_to_walk_activity"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/et_proposed_time_invite_team_to_walk_activity"
        app:layout_constraintHorizontal_bias="0.2" />

    <Button
        android:id="@+id/btn_send_invitation_to_team"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_to_team_invite_team_to_walk"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_proposed_time_prompt_invite_team_to_walk_activity" />

</androidx.constraintlayout.widget.ConstraintLayout>