...
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:id="@+id/scroll_view_save"
    tools:context=".activities.userroutes.SaveRouteActivity"
    tools:showIn="@layout/activity_save_route">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...
            android:id="@+id/tv_save_route_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title" />

        <EditText
            android:id="@+id/et_save_route_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            android:hint="@string/name_route_hint"
...
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/notesHint"
            android:importantForAutofill="no"/>

        <Button
            android:id="@+id/btn_save_route"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save" />

    </LinearLayout>
</ScrollView>
